Bug 387016 - macro redefinition warning
Summary: macro redefinition warning
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-16 23:27 UTC by uwestoehr
Modified: 2017-11-21 22:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-16 23:27:09 UTC
I get.

2>C:\CraftRoot\labplot\src\backend/lib/macros.h(39): warning C4005: 'WARNING': macro redefinition
2>  C:\CraftRoot\include\kdewin_export.h(84): note: see previous definition of 'WARNING'
Comment 1 Stefan Gerlach 2017-11-21 22:10:24 UTC
Git commit a0c591185f524da8a80e7ad3911537816fda3fa3 by Stefan Gerlach.
Committed on 21/11/2017 at 22:09.
Pushed by sgerlach into branch 'master'.

FIXED-IN: 2.5

M  +1    -3    src/backend/lib/macros.h
M  +1    -1    src/kdefrontend/datasources/ImportOpj.cpp
M  +12   -12   src/tools/TeXRenderer.cpp

https://commits.kde.org/labplot/a0c591185f524da8a80e7ad3911537816fda3fa3
Comment 2 uwestoehr 2017-11-21 22:34:28 UTC
many thanks for fixing.