BUG: 387016

FIXED-IN: 2.5